[package]
name = "shader"
version = "0.1.0"
authors = ["Hjalte Nannestad <hjalte.nannestad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "*"
winit = "*"
vulkano-win = "*"
vulkano-shaders = "*"
shaderc = "*"
nalgebra = "*"
clap = "3.0.0-alpha"
